# rust_api

./: .env  .gitignore  Cargo.toml  Dockerfile  FIXME  README.md  ReadMe  _ReadMe  docker-compose.yml
.sqlx/: query-3cd8f2b9d860ede52339aa2bc3da3689542bf447c759e5deb057cdbbe6f43424.json  query-966d3fdbfb6bf99e0856dad03ca36badbdd9150b460d9cac82473175cc788680.json  query-b57c407d96620d53d6e086f353429c2cf1c0095c859174cd18a133ffcdef889f.json  query-d0bcf3421dde3ef6ea9de420452d7cd5b822703a1e306605055f841d62508952.json  query-f255dc0e39632dcb66fae7eb4edec7c3648c25ff2d8f4fcd178e920f794a2160.json
migrations/: 20250522224100_create_items_table.sql  20250603001409_create_users_table.up.sql  20250603001644_create_payments_table.up.sql  20250603003750_create_properties_table.up.sql  20250603004757_alter_payments_for_rentals.down.sql  20250603004757_alter_payments_for_rentals.up.sql
src/: errors.rs  main.rs  models.rs
src/db/: mod.rs  payment.rs  property.rs  users.rs
src/handlers/: payment.rs  property.rs  user.rs
src/models/: mod.rs  payment.rs  property.rs  user.rs
