[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features= ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4", "serde"] }