[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features= ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "bigdecimal", "time", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
http = "1.3.1"
axum-extra = "0.10.1"
time = { version = "0.3.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
argon2 = "0.5.3"
bigdecimal = { version = "0.4.8", features = ["serde"] }
